# SimpleRTS

./: .gitignore  CMakeLists.txt  LButton.cpp  LButton.h  LTexture.cpp  LTexture.h  README.md  main.cpp
cmake/: FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
data/: settings.lua
src/: Ant.cpp  Ant.h  CircleEntity.cpp  CircleEntity.h  Collision.cpp  Collision.h  Dot.cpp  Dot.h  DotCircle.cpp  DotCircle.h  DotRect.cpp  DotRect.h  LButton.cpp  LButton.h  LGlobals.h  LTexture.cpp  LTexture.h  LTimer.cpp  LTimer.h  Particle.cpp  Particle.h  RectEntity.cpp  RectEntity.h  Vector2.cpp  Vector2.h  game.cpp  game.h  main.cpp  math.cpp  math.h
src/entities/: GameEntity.h
